[gd_scene load_steps=14 format=3 uid="uid://7jceo22y8g4r"]

[ext_resource type="Script" uid="uid://7jx4ddh184x0" path="res://scripts/pause_menu.gd" id="1_kukqi"]
[ext_resource type="Shader" uid="uid://dwqxbci3gfpv4" path="res://assets/shaders/pause_menu.gdshader" id="1_n87rw"]
[ext_resource type="FontFile" uid="uid://bwysujfji8k46" path="res://assets/fonts/PublicPixel.otf" id="2_myx47"]
[ext_resource type="AudioStream" uid="uid://potu33hjvmo7" path="res://assets/sounds/click1.wav" id="4_5d2l8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nwcfo"]
shader = ExtResource("1_n87rw")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_myx47"]
bg_color = Color(0.2123048, 0.21230489, 0.21230471, 1)
border_width_left = 2
border_width_right = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0.06469653, 0.06469653, 0.06469653, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kukqi"]
bg_color = Color(0.34781694, 0.34781697, 0.34781682, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kukqi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5d2l8"]
bg_color = Color(0.34901962, 0.34901962, 0.34901962, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7l7mv"]
bg_color = Color(0.34901962, 0.34901962, 0.34901962, 1)

[sub_resource type="Animation" id="Animation_7l7mv"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_5d2l8"]
resource_name = "blur"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 2),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0, 0.8, -0.050000004, -0.13333334, 0, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(0, -0.15, 0, 0.15, 0, 1, -0.050000004, -0.16666667, 0, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v4r4p"]
_data = {
&"RESET": SubResource("Animation_7l7mv"),
&"blur": SubResource("Animation_5d2l8")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource("1_kukqi")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_nwcfo")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_myx47")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="Resume" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_myx47")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_kukqi")
text = "Resume"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_kukqi")

[node name="Restart" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_myx47")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_5d2l8")
text = "Restart"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxEmpty_kukqi")

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_myx47")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_7l7mv")
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v4r4p")
}

[node name="ButtonPress" type="AudioStreamPlayer" parent="." groups=["Sound Effects"]]
stream = ExtResource("4_5d2l8")
volume_db = 10.0
bus = &"SFX"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
